[metadata]
name = clib
version = attr: clib.__version__
description = a Library for CTF utils
author = sean9892
author_email = sean9892@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.11.10
install_requires = 
    pycryptodome>=3.20.0
    pwntools>=4.13.0